...
          <View className="mb-8 flex-row justify-between items-start">
            <View>
              <Text className="text-zinc-500 text-[12px] font-bold mb-1 uppercase tracking-widest font-sans ml-1">
                Central de Comando
              </Text>
              <Text className="text-4xl font-extrabold text-white mb-2 font-display">
                Dashboard
              </Text>
            </View>
            {renderHeaderAvatar()}
          </View>

          <View className="gap-y-4">
...
                          : '#A855F7'
                    }
                  />
                </View>
                <View>
                  <Text className="text-white text-lg font-black font-display tracking-tight">
                    Anamnese
                  </Text>
                  <Text
                    className="text-[10px] font-bold tracking-widest uppercase font-sans"
                    style={{
                      color: isAnamnesisSubmitted
                        ? '#10B981'
                        : Object.keys(anamnesisResponses).length > 0
                          ? '#F59E0B'
                          : '#71717A', // zinc-500
                    }}
                  >
                    {isAnamnesisSubmitted
                      ? 'Concluído'
                      : Object.keys(anamnesisResponses).length > 0
                        ? 'Em Andamento'
                        : 'Ficha de Saúde'}
                  </Text>
                </View>
              </View>
              <Ionicons name="chevron-forward" size={20} color={brandColors.text.muted} />
            </View>
          </TouchableOpacity>
...
