...
          <View className="mb-8 flex-row justify-between items-start">
            <View>
              <Text className="text-zinc-500 text-[12px] font-bold mb-1 uppercase tracking-widest font-sans ml-1">
                Central de Comando
              </Text>
              <Text className="text-4xl font-extrabold text-white mb-2 font-display">
                Dashboard
              </Text>
            </View>
            {renderHeaderAvatar()}
          </View>

          <View className="gap-y-4">
...
                change={steps >= 10000 ? 'Meta!' : `${Math.round((steps / 10000) * 100)}%`}
                icon="walk"
              />
            </View>
            <View className="flex-1">
              <StatCard
                label="Calorias"
                value={`${calories}`}
                trend="up"
                change="Kcal"
                icon="flame"
              />
            </View>
...
