...
      />

      {/* Central Button usually, or just 3rd item */}
      <Tabs.Screen
        name="nutrition"
        options={{
          title: 'Nutrição',
          href: (isStudent || (accountType === 'professional' && abilities?.can('manage', 'Diet'))) ? '/nutrition' : null,
        }}
      />

      <Tabs.Screen
        name="progress"
        options={{
          title: 'Progresso',
          href: isStudent ? '/progress' : null,
        }}
      />
      
      <Tabs.Screen
        name="profile"
...
